--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -6,6 +6,7 @@
         <%= f.input :description, label: "Description"%>
         <%= f.input :price, label: "Precio"%>
         <%= f.input :tipo, label: "Tipo", collection: ["Entrada", "Plato Principal", "Postre", "Bebida sin alcohol", "Bebida con alcohol", "Vinos"]%>
+        <%= f.input :photo, as: :file %>
         <div class="d-flex justify-content-center">
         <%= f.submit "Crear habitacion"%>
         </div>
