--- a/app/views/categorys/new.html.erb
+++ b/app/views/categorys/new.html.erb
@@ -1,14 +1,10 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12">
-      <%= simple_form_for(@menu) do |f| %>
+      <%= simple_form_for(@categoria) do |f| %>
         <%= f.input :name, label: "Nombre"%>
-        <%= f.input :description, label: "Description"%>
-        <%= f.input :price, label: "Precio"%>
-        <%= f.input :tipo_id, label: "Tipo"%>
-        <%= f.input :photo, as: :file %>
         <div class="d-flex justify-content-center">
-        <%= f.submit "Crear habitacion"%>
+        <%= f.submit "Crear Categoria"%>
         </div>
       <% end %>
       <%= link_to 'Back', root_path, class: "btn btn-outline-secondary" %>
