--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,165 +1,33 @@
-<div class="text-center"> Entradas</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Sugerencia</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%@entradas.each do |entradas| %>
+<%@tipo.each do |tipo| %>
+  <div class="text-center"><%= tipo.name %></div>
+  <table class="table">
+    <thead>
       <tr>
-        <th scope="row"><%= entradas.id %></th>
-        <td><%= link_to entradas.name, menu_path(entradas) %></td>
-        <td><%= entradas.price %></td>
-        <% if entradas.activado == true %>
-          <td> SI</td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-        <% if entradas.sugerencia == true %>
-          <td><%= link_to "SI", sugerencia_path(entradas) %></td>
-        <% else %>
-          <td><%= link_to "NO", sugerencia_path(entradas) %></td>
-        <% end %>
+        <th scope="col">#</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Sugerencia</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="text-center">Plato Principal</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Sugerencia</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%@plato.each do |plato| %>
-      <tr>
-        <th scope="row"><%= plato.id %></th>
-        <td><%= link_to plato.name, menu_path(plato) %></td>
-        <td><%= plato.price %></td>
-        <% if plato.activado == true %>
-          <td> SI</td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-        <% if plato.sugerencia == true %>
-          <td> SI </td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="text-center">Postres</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Sugerencia</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%@postre.each do |postre| %>
-      <tr>
-        <th scope="row"><%= postre.id %></th>
-        <td><%= link_to postre.name, menu_path(postre) %></td>
-        <td><%= postre.price %></td>
-        <% if postre.activado == true %>
-          <td> SI</td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-        <% if postre.sugerencia == true %>
-          <td> SI </td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="text-center"> Bebidas sin alcohol</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Sugerencia</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%@postre.each do |postre| %>
-      <tr>
-        <th scope="row"><%= postre.id %></th>
-        <td><%= link_to postre.name, menu_path(postre) %></td>
-        <td><%= postre.price %></td>
-        <% if postre.activado == true %>
-          <td> SI</td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-        <% if postre.sugerencia == true %>
-          <td> SI </td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="text-center">Bebidas con Alcohol</div>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Precio</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Sugerencia</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%@postre.each do |postre| %>
-      <tr>
-        <th scope="row"><%= postre.id %></th>
-        <td><%= link_to postre.name, menu_path(postre) %></td>
-        <td><%= postre.price %></td>
-        <% if postre.activado == true %>
-          <td> SI</td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-        <% if postre.sugerencia == true %>
-          <td> SI </td>
-        <% else %>
-          <td>NO</td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<div id="menu">
-  <div class="sub-menu">
-      <div>Ver Carta</div>
-      <div>waiter.png</div>
-  </div>
-  <div class="sub-menu">
-     <div>Llamar Mozo</div>
-    <div>waiter.png</div>
-  <div>
-</div>
+    </thead>
+    <tbody>
+      <% @menus.where(tipo_id: tipo).each do |menu|%>
+        <tr>
+          <th scope="row"><%= menu.id %></th>
+          <td><%= link_to menu.name, menu_path(menu) %></td>
+          <td><%= menu.price %></td>
+          <% if menu.activado == true %>
+            <td> SI</td>
+          <% else %>
+            <td>NO</td>
+          <% end %>
+          <% if menu.sugerencia == true %>
+            <td><%= link_to "SI", sugerencia_path(menu) %></td>
+          <% else %>
+            <td><%= link_to "NO", sugerencia_path(menu) %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
