--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -5,7 +5,7 @@
         <%= f.input :name, label: "Nombre"%>
         <%= f.input :description, label: "Description"%>
         <%= f.input :price, label: "Precio"%>
-        <%= f.input :tipo_id, label: "Tipo"%>
+        <%= f.input :tipo_id, label: "Tipo", collection: @tipo.all%>
         <%= f.input :photo, as: :file %>
         <div class="d-flex justify-content-center">
         <%= f.submit "Crear habitacion"%>
