--- a/app/views/menus/carta.html.erb
+++ b/app/views/menus/carta.html.erb
@@ -49,6 +49,7 @@
               <div class="card-product-infos">
                 <h2><%= menu.name %></h2>
                 <p>Precio: <strong><%= menu.price %></strong> </p>
+                <%= link_to "Ver mas", menu_path(menu), class:('btn btn-primary') %>
                 <h4 class="btn btn-primary">Primary</h4>
               </div>
             </div>
