--- a/app/assets/stylesheets/components/_rectangunlo.scss
+++ b/app/assets/stylesheets/components/_rectangunlo.scss
@@ -6,12 +6,14 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+border-radius: 15px;
 }
 
 .card-product img {
   height: 100%;
   width: 120px;
   object-fit: cover;
+  border-radius: 15px;
 }
 
 .card-product h2 {
