--- a/app/views/covids/index.html.erb
+++ b/app/views/covids/index.html.erb
@@ -18,7 +18,7 @@
 
           <td><%= cliente.tel%></td>
           <td><%= cliente.email%></td>
-          <!-- <td><%= cliente.grados%></td> -->
+          <td><%= cliente.grados%></td>
         </tr>
       <% end %>
     </tbody>
