--- a/app/views/facturas/new.html.erb
+++ b/app/views/facturas/new.html.erb
@@ -6,7 +6,7 @@
       <%= simple_form_for [@fecha, @factura] do |f| %>
         <%= f.input :nro, label: "Nro"%>
         <%= f.input :proveedor, label: "Proveedor"%>
-        <%= f.input :monto, label: "Monto"%>
+        <%= f.input :monto, label: "Monto (no poner puntos ni comas)"%>
         <%= f.input :tipo, collection: ["Contado", "Credito"], label: "Contado o Credito"%>
         <%= f.input :image, as: :file, label: "Subir comprobante" %>
         <div class="d-flex justify-content-center">
