--- a/app/views/fechas/show.html.erb
+++ b/app/views/fechas/show.html.erb
@@ -2,6 +2,7 @@
   <div style="overflow-x:auto;">
     <div class="text-center">
       <%= link_to "Cargar comprobante", new_fecha_factura_path(@fecha), class: "btn btn-success text-center"%>
+      <%= link_to   "INGRESO/EGRESO", fecha_ingresoegreso_path(@fecha), class: "btn btn-primary text-center"%>
     </div>
   </div>
   <div class="text-center">
@@ -14,7 +15,8 @@
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
       <a class="nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Factura Contado</a>
       <a class="nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Factura Crédito</a>
-      </div>
+      <a class="nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Ingreso/Egreso</a>
+    </div>
   </nav>
   <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
@@ -36,7 +38,7 @@
                 </tr>
               </thead>
               <tbody>
-                <% @factura.where(tipo: "Contado" || "Ingreso" || "Egreso").each do |factura| %>
+                <% @factura.where(tipo: "Contado").each do |factura| %>
                 <tr>
                   <%if factura.image.attached? %>
                     <td><%=link_to factura.nro, "https://res.cloudinary.com/dpjghjtp1/image/upload/v1594152130/#{factura.image.key}.jpg", target: :_blank%></td>
@@ -53,7 +55,7 @@
                   <% end %>
                   <td>
                     <% if factura.autorizado_por.nil? %>
-                      <% if !current_user.nil? && current_user.rol == "admin" || current_user.rol == "Administracion" %>
+                      <% if current_user.rol == "admin" || current_user.rol == "Administracion" %>
                         <%= link_to aprobarfactura_path(factura), data: {confirm: "Deseas confirmar esta operacion??"} do  %>
                         <h6 class="btn btn-danger text-center">No-Autorizado</h6>
                         <% end %>
@@ -95,6 +97,7 @@
           </div>
         </div>
     </div>
+
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
       <div class="tab-pane fade show" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg">
@@ -111,6 +114,7 @@
                   <th scope="col">Cargado en el sys</th>
                   <th scope="col">Pagado en el sys</th>
                   <th scope="col">Original en</th>
+                  <th scope="col">Recibo Legal</th>
                 </tr>
               </thead>
               <tbody>
@@ -162,6 +166,62 @@
             </div>
           </div>
         </div>
+    </div>
+    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg">
+        <div style="overflow-x:auto;">
+          <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Tipo</th>
+              <th scope="col">Obserbacion</th>
+              <th scope="col">Monto</th>
+              <th scope="col">Recibido por</th>
+              <th scope="col">Autorizado por</th>
+              <th scope="col">Cargado en el sys</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @factura.where(tipo: "Ingreso").or(@factura.where(tipo: "Egreso")).each do |factura| %>
+            <tr>
+              <td><%=factura.tipo%></td>
+              <td><%=factura.proveedor %></td>
+              <td><%= number_with_delimiter(factura.monto.to_i, :delimiter => '.') %></td>
+              <% if factura.registrado_por.nil? %>
+                <td><%=factura.registrado_por%></td>
+                <% else %>
+              <td><%=factura.registrado_por.capitalize%></td>
+              <% end %>
+              <td>
+                <% if factura.autorizado_por.nil? %>
+                  <% if !current_user.nil? && current_user.rol == "admin" || current_user.rol == "Administracion" %>
+                    <%= link_to aprobarfactura_path(factura), data: {confirm: "Deseas confirmar esta operacion??"} do  %>
+                    <h6 class="btn btn-danger text-center">No-Autorizado</h6>
+                    <% end %>
+                    <% else %>
+                    <h6 class="btn btn-danger text-center">No-Autorizado</h6>
+                  <% end %>
+                <% else %>
+                <h6 class="btn btn-success text-center"><%=factura.autorizado_por%></h6>
+                <% end %>
+              </td>
+                <% if factura.cargado_por.nil? %>
+                  <td>
+                    <%= link_to cargarfactura_path(factura), data: {confirm: "Deseas Cargar esta operacion en el sistema??"} do  %>
+                    <h6 class="btn btn-danger text-center">No-Cargado</h6>
+                    <% end %>
+                  </td>
+                <% else %>
+                  <td>
+                    <h6 class="btn btn-primary text-center"><%=factura.cargado_por.capitalize%></h6>
+                  </td>
+              <% end %>
+            </tr>
+            <% end %>
+          </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 </div>
