--- a/app/views/fechas/show.html.erb
+++ b/app/views/fechas/show.html.erb
@@ -35,6 +35,7 @@
                   <th scope="col">Cargado en el sys</th>
                   <th scope="col">Pagado en el sys</th>
                   <th scope="col">Original en</th>
+                  <th scope="col">Eliminar</th>
                 </tr>
               </thead>
               <tbody>
@@ -89,6 +90,9 @@
                       <h6 class="btn btn-success text-center"><%=factura.original_en%></h6>
                     <% end %>
                   </td>
+                  <td>
+                    <%= link_to "Borrar", factura_path(factura), method: :delete %>
+                  </td>
                 </tr>
                 <% end %>
               </tbody>
@@ -115,6 +119,7 @@
                   <th scope="col">Pagado en el sys</th>
                   <th scope="col">Original en</th>
                   <th scope="col">Recibo Legal</th>
+                  <th scope="col">Borrar</th>
                 </tr>
               </thead>
               <tbody>
@@ -159,6 +164,10 @@
                   <% end %>
                   <td><h6 class="btn btn-success text-center">SI-NO</h6></td>
                   <td><h6 class="btn btn-success text-center">En recepcion</h6></td>
+                  <td><h6 class="btn btn-success text-center">-</h6></td>
+                  <td>
+                    <%= link_to "Borrar", factura_path(factura), method: :delete %>
+                  </td>
                 </tr>
                 <% end %>
               </tbody>
@@ -179,6 +188,7 @@
               <th scope="col">Recibido por</th>
               <th scope="col">Autorizado por</th>
               <th scope="col">Cargado en el sys</th>
+              <th scope="col">Borrar</th>
             </tr>
           </thead>
           <tbody>
@@ -211,9 +221,15 @@
                     <h6 class="btn btn-danger text-center">No-Cargado</h6>
                     <% end %>
                   </td>
+                  <td>
+                    <%= link_to "Borrar", factura_path(factura), method: :delete %>
+                  </td>
                 <% else %>
                   <td>
                     <h6 class="btn btn-primary text-center"><%=factura.cargado_por.capitalize%></h6>
+                  </td>
+                  <td>
+                    <%= link_to "Borrar", factura_path(factura), method: :delete %>
                   </td>
               <% end %>
             </tr>
