--- a/app/views/fechas/show.html.erb
+++ b/app/views/fechas/show.html.erb
@@ -163,7 +163,15 @@
                       </td>
                   <% end %>
                   <td><h6 class="btn btn-success text-center">SI-NO</h6></td>
-                  <td><h6 class="btn btn-success text-center">En recepcion</h6></td>
+                  <td>
+                    <% if current_user.rol == "Administracion" || current_user.rol == "Contabilidad" %>
+                      <%= link_to lugarfactura_path(factura), data: {confirm: "Deseas confirmar esta operacion??"} do  %>
+                      <h6 class="btn btn-success text-center"><%=factura.original_en%></h6>
+                      <% end %>
+                      <% else %>
+                      <h6 class="btn btn-success text-center"><%=factura.original_en%></h6>
+                    <% end %>
+                  </td>
                   <td><h6 class="btn btn-success text-center">-</h6></td>
                   <td>
                     <%= link_to "Borrar", factura_path(factura), method: :delete %>
@@ -192,7 +200,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @factura.where(tipo: "Ingreso").or(@factura.where(tipo: "Egreso")).each do |factura| %>
+            <% @factura.where(tipo: "Ingreso").or(@factura.where(tipo: "Egreso").or(@factura.where(tipo: "Recibo"))).each do |factura| %>
             <tr>
               <td><%=factura.tipo%></td>
               <td><%=factura.proveedor %></td>
